Fix icon stroke color for dark mode

--- a/resources/css/elements/tables.css
+++ b/resources/css/elements/tables.css
@@ -160,7 +160,7 @@
 }
 
 .table-drag-handle {
-    @apply h-full cursor-grab hover:bg-gray-100 dark:hover:bg-gray-700;
+    @apply h-full cursor-grab hover:bg-gray-100 dark:hover:bg-gray-700 dark:opacity-75;
     background-image: url('../../svg/drag-dots.svg');
     background-repeat: no-repeat;
     background-position: center center;
